[package]
name = "tokio-ssdp"
version = "1.0.0"
authors = ["Harry Cheng <chengyuhui1@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chengyuhui/tokio-ssdp"
homepage = "https://github.com/chengyuhui/tokio-ssdp"
documentation = "https://docs.rs/tokio-ssdp"
description = """
A mininal SSDP device implementation using `tokio`.
"""
keywords = ["network", "ssdp", "dlna"]
categories = ["network-programming"]
edition = "2024"
include = ["Cargo.toml", "LICENSE", "README.md", "src/**/*.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["sync", "net", "macros", "time", "rt"] }
httparse = "1"
socket2 = "0.6"
log = "0.4"
rand = "0.8"
httpdate = "1"
thiserror = "2"

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
